--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -180,19 +180,44 @@ margin-left:30%;
   margin-top: 15px;
 }
 
-
-
 .service-content {
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 15vh;
-  background-image: url(../img/2nd-section.jpg);
+  padding-top: 20vh;
+  background-image: url(../img/fondo5.jpg);
   background-attachment: fixed;
   min-height: 100vh;
   background-size: cover;
   background-position: center center;
 }
 
+.boton_respuesta{
+  display: inline-block;
+  background-color: #ff7d27;
+  padding: 15px 24px;
+  border-radius: 3px;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px rgb(216, 216, 216);
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  text-shadow: 1.5px 1.5px 1.5px rgb(56, 56, 56);
+}
+
+.boton_respuesta:hover{
+  background-color: #ffa127;
+  color: #fff;
+  text-decoration: none;
+}
+
+.boton_respuesta:active{
+  background-color: #ffa127;
+  color: #fff;
+  text-decoration: none;
+}
 .service-content .left-text h4 {
   font-size: 24px;
   font-weight: 500;
@@ -200,7 +225,8 @@ margin-left:30%;
 }
 
 h4, .h4 {
-  font-size: 18px;
+  font-size: 23px;
+  text-shadow: 1.5px 1.5px 1.5px rgb(133, 133, 133);
 }
 
 .service-content .left-text .line-dec {
