--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -121,6 +121,33 @@ a:hover { color: #FF0; }
           animation-name: fadeInRight;
 }
 
+.footer_button a{
+  display: inline-block;
+  background-color: #ff7d27;
+  padding: 15px 24px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-size: 11px;
+  color: #fff;
+  font-weight: 700;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+
+  cursor: pointer;
+  font-size: 1em;
+  box-shadow: 2px 2px 2px black;
+  margin-bottom: 1%;
+}
+
+.primary-button{
+  width: 20%;
+  margin-right: 5%;
+
+}
+
+ul{
+  padding-inline-start: 0;
+}
 
 .primary-button a {
   display: inline-block;
@@ -134,8 +161,31 @@ a:hover { color: #FF0; }
   text-decoration: none;
   letter-spacing: 0.5px;
   margin-left:50px;
+  cursor: pointer;
+  font-size: 1em;
+  width: 100%;
+  box-shadow: 2px 2px 2px black;
 }
 
+
+.primary-button button{
+  display: inline-block;
+  background-color: #ff7d27;
+  padding: 15px 24px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-size: 11px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 1em;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+  margin-left:50px;
+  cursor: pointer;
+  border-width: 0;
+  width: 100%;
+  box-shadow:2px 2px 2px rgb(0, 0, 0);
+}
 
 .parallax-content {
   width: 100%;
@@ -151,7 +201,9 @@ a:hover { color: #FF0; }
 }
 .botones{
   display:flex;
-margin-left:30%;
+justify-content: center;
+padding-right: 5%;
+
 }
 .baner-content h1 {
   margin-top: 0px;
@@ -160,6 +212,7 @@ margin-left:30%;
   font-weight: 900;
   text-transform: uppercase;
   margin-bottom: 0px;
+  text-shadow: 2px 2px black;
 }
 
 .baner-content em {
@@ -174,6 +227,8 @@ margin-left:30%;
   font-weight: 300;
   font-size: 48px;
   color: #fff;
+  text-shadow: 2px 2px black;
+  
 }
 
 .baner-content .primary-button {
@@ -463,19 +518,15 @@ section {
 
 footer {
   text-align: center;
-  background-color: #282b2f;
-  padding: 70px 0px;
+  background-color: black;
+  padding: 30px 0px;
+  
 }
 
 footer .primary-button {
   margin-bottom: 30px;
 }
 
-footer ul {
-  padding: 0px;
-  margin: 0px;
-  list-style: none;
-}
 
 footer ul li {
   display: inline-block;
@@ -488,7 +539,7 @@ footer ul li a {
   line-height: 40px;
   text-align: center;
   display: inline-block;
-  background-color: #ff7d27;
+  background-color: white;
   color: #282b2f;
   border-radius: 50%;
   text-decoration: none;
