--- a/css/test_facebook.css
+++ b/css/test_facebook.css
@@ -19,6 +19,7 @@ p {
   body { 
     position: relative; /* we need this for the scrollspy */ 
     font-size: 14px;
+    font-family: 'Titillium Web', sans-serif;
   }
   
   a:hover { color: #FF0; }
@@ -195,17 +196,38 @@ p {
   
   
   .baner-content {
-    padding-top: 30vh;
+    padding-top: 10vh;
     text-align: center;
-    background-color: white;
+    background-image: url(../img/facebook.png);
+  }
+
+  .first-content{
+      margin-left: 20%;
   }
   .botones{
     display:flex;
-    width: 28%;
-    margin-left: 36%;
-    margin-top: 2%;
-    justify-content: space-between;
+    width: 100%;
+    margin-top: 12%;
+    justify-content: center;
+    padding-right: 25%;
   }
+
+ .botones a{
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+    color: white;
+    border-radius: 50%;
+    text-decoration: none;
+    transition: all 0.5s;
+    font-size: 150px;
+    margin-left: 35%;
+ }
+
+ .botones a:hover{
+    color: black;
+ }
+
   .baner-content h1 {
     margin-top: 0px;
     font-size: 128px;
@@ -224,8 +246,9 @@ p {
   .baner-content span {
     display: inline-block;
     margin-top: 50px;
-    font-size: 4em;
-    color: blue;
+    font-size: 4.5em;
+    color: white;
+    font-weight: bold;
   }
   
   .baner-content .primary-button {
