--- a/css/templatemo-test-google.css
+++ b/css/templatemo-test-google.css
@@ -20,7 +20,13 @@ p {
     position: relative; /* we need this for the scrollspy */ 
     font-size: 14px;
   }
-  
+  #test-google{
+    background-image: url(../img/google/back1.png);
+    background-size: cover;
+  }
+  .pregunta-google{
+    text-shadow: 3px 3px 3px rgb(112, 94, 0);
+  }
   a:hover { color: #FF0; }
   
   /*----------
@@ -121,7 +127,9 @@ p {
   
   .primary-button1{
     float: left;
-    background-color: #ff7d27;
+    background-color: #992020;
+    text-shadow: 2px 2px 2px rgb(8, 21, 54);
+    box-shadow: 3px 3px 3px rgb(26, 55, 136);
     padding: 15px 24px;
     border-radius: 5px;
     text-decoration: none;
@@ -129,16 +137,14 @@ p {
     width: 100px;
     height: 70px;
     cursor: pointer;
-    box-shadow: 3px 3px 3px rgb(87, 83, 83);
     color: #fff;
-    text-transform: uppercase;
-    font-size: 30px;
+    font-size: 28px;
     font-weight: 700;
-    text-shadow: 1.5px 1.5px 1.5px rgb(56, 56, 56);
+    
   }
   
   .primary-button1:hover{
-    background-color: #ffa127;
+    background-color: #e22020;
     width: 110px;
     height: 76px;
     color: rgb(238, 253, 182);
@@ -146,7 +152,7 @@ p {
   }
   
   .primary-button1:active{
-    background-color: #ffa127;
+    background-color:#e02a2a;
     width: 110px;
     height: 76px;
     color: rgb(238, 253, 182);
@@ -155,7 +161,9 @@ p {
   
   .primary-button2{
     float: right;
-    background-color: #ff7d27;
+    background-color: #992020;
+    text-shadow: 2px 2px 2px rgb(8, 21, 54);
+    box-shadow: 3px 3px 3px rgb(26, 55, 136);
     padding: 15px 24px;
     border-radius: 5px;
     text-decoration: none;
@@ -163,16 +171,13 @@ p {
     width: 100px;
     height: 70px;
     cursor: pointer;
-    box-shadow: 3px 3px 3px rgb(87, 83, 83);
     color: #fff;
-    text-transform: uppercase;
     font-size: 30px;
     font-weight: 700;
-    text-shadow: 1.5px 1.5px 1.5px rgb(56, 56, 56);
   }
   
   .primary-button2:hover{
-    background-color: #ffa127;
+    background-color: #e02a2a;
     width: 110px;
     height: 76px;
     color: rgb(238, 253, 182);
@@ -180,7 +185,7 @@ p {
   }
   
   .primary-button2:active{
-    background-color: #ffa127;
+    background-color: #e02a2a;
     width: 110px;
     height: 76px;
     color: rgb(238, 253, 182);
@@ -223,9 +228,9 @@ p {
   
   .baner-content span {
     display: inline-block;
-    margin-top: 50px;
+    margin-top: 10px;
     font-size: 4em;
-    color: blue;
+    color: rgb(214, 186, 27);
   }
   
   .baner-content .primary-button {
