--- a/css/templatemo-test-google.css
+++ b/css/templatemo-test-google.css
@@ -191,64 +191,61 @@ p {
     background-color: #992020;
     text-shadow: 2px 2px 2px#300b0b;
     box-shadow: 4px 4px 4px #db7878;
-    padding: 15px 24px;
-    border-radius: 5px;
+    padding: 5% 10%;
+    border-radius: 10%;
     text-decoration: none;
-    letter-spacing: 0.5px;
-    width: 100px;
-    height: 70px;
+    width: 30%;
     cursor: pointer;
     color: #fff;
-    font-size: 28px;
+    font-size: 200%;
     font-weight: 700;
-    
+    height: 70%;
   }
   
   .primary-button1:hover{
     background-color: #e22020;
-    width: 110px;
-    height: 76px;
+    width: 32%;
+    font-size: 220%;
     color: rgb(238, 253, 182);
     text-decoration: none;
   }
   
   .primary-button1:active{
     background-color:#e02a2a;
-    width: 110px;
-    height: 76px;
+    width: 32%;
+    font-size: 220%;
     color: rgb(238, 253, 182);
     text-decoration: none;
   }
   
   .primary-button2{
-    float: right;
+    float: left;
     background-color: #992020;
     text-shadow: 2px 2px 2px#300b0b;
     box-shadow: 4px 4px 4px #db7878;
-    padding: 15px 24px;
-    border-radius: 5px;
+    padding: 5% 10%;
+    border-radius: 10%;
     text-decoration: none;
-    letter-spacing: 0.5px;
-    width: 100px;
-    height: 70px;
+    width: 30%;
     cursor: pointer;
     color: #fff;
-    font-size: 30px;
+    font-size: 200%;
     font-weight: 700;
+    height: 70%;
   }
   
   .primary-button2:hover{
-    background-color: #e02a2a;
-    width: 110px;
-    height: 76px;
+    background-color: #e22020;
+    width: 32%;
+    font-size: 220%;
     color: rgb(238, 253, 182);
     text-decoration: none;
   }
   
   .primary-button2:active{
-    background-color: #e02a2a;
-    width: 110px;
-    height: 76px;
+    background-color: #e22020;
+    width: 32%;
+    font-size: 220%;
     color: rgb(238, 253, 182);
     text-decoration: none;
   }
@@ -265,11 +262,13 @@ p {
     text-align: center;
     background-color: white;
   }
+
   .botones{
     display:flex;
     width: 28%;
     margin-left: 36%;
     margin-top: 2%;
+    height: 70%;
     justify-content: space-between;
   }
   .baner-content h1 {
