Fixed: la imagen se veía muy grande.

--- a/css/templatemo-test-google.css
+++ b/css/templatemo-test-google.css
@@ -320,6 +320,8 @@ p {
   .imagen_estudios{
     width: 40%;
     height: 30%;
+    max-width: 40%;
+    max-height: 30%;
   }
   
   .service-content {
