--- a/css/templatemo-test-google.css
+++ b/css/templatemo-test-google.css
@@ -41,16 +41,16 @@ p {
   .footer_button{
     display: inline-block;
     background-color: #ff7d27;
-    padding: 15px 24px;
+    padding: 2% 4%;
     border-radius: 3px;
     text-decoration: none;
     letter-spacing: 0.5px;
     cursor: pointer;
-    width: 180px;
+    width: 34%;
     box-shadow: 2px 2px 2px rgb(22, 20, 20);
     color: #fff;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 90%;
     font-weight: 700;
     text-shadow: 1.5px 1.5px 1.5px rgb(14, 12, 12);
   }
