--- a/css/test_whatsapp.css
+++ b/css/test_whatsapp.css
@@ -139,20 +139,15 @@ p {
     font-weight: 700;
     text-shadow: 1.5px 1.5px 1.5px rgb(56, 56, 56);
   }
-
-  
-#volverindex{
-  color:white;
-}
   
   .primary-button1:hover{
     background-color: #ffa127;
     color: rgb(238, 253, 182);
     text-decoration: none;
   }
-  
-
-  
+  #volverindex{
+      color:white;
+  }
   .primary-button2{
     float: right;
     background-color: #ff7d27;
@@ -197,7 +192,7 @@ p {
   .baner-content {
     padding-top: 10vh;
     text-align: center;
-    background-image: url(../img/facebook.png);
+    background-image: url(../img/whatsapp.png);
   }
 
   .first-content{
@@ -208,7 +203,7 @@ p {
     width: 100%;
     /* margin-top: 10%; */
     justify-content: center;
-    bottom: 5%;
+    bottom: 10%;
     position: fixed;
   }
 
@@ -220,8 +215,7 @@ p {
     border-radius: 50%;
     text-decoration: none;
     transition: all 0.5s;
-    font-size: 135px;
-	margin: 20px;
+    font-size: 100px;
  }
 
  .botones a:hover{
@@ -261,7 +255,7 @@ p {
       font-weight: bold;
   }
   .backg{
-    background-image:url(../img/fbrespuestas.png);
+    background-image:url(../img/whatsappresp.PNG);
   }
   .baner-content .primary-button {
     margin-top: 15px;
@@ -271,7 +265,7 @@ p {
     font-size:1.2em;
   }
   .divser{
-    height: 420px;
+    height: 350px;
     margin-bottom: 3%;
   }
   .ares{
@@ -289,11 +283,26 @@ p {
     font-weight: 500;
     color: #fff;
   }
-  
+  .volver{
+      padding:5px;
+padding-left:20px;
+padding-right:20px;
+font-size: 1em;
+border: 1px solid black;
+background-color: rgb(0, 255, 213);
+color:rgba(0, 0, 0, 0.5);
+
+  }
+
+  .volverdiv{
+    margin-bottom: 15px;
+    margin-top:15px;
+  }
+
   h4, .h4 {
     font-size: 18px;
     height: 80px;
-    color:rgb(130, 241, 245);
+    color:rgb(240 251 117);
   }
   
   .service-content .left-text .line-dec {
@@ -594,7 +603,7 @@ p {
 		border-radius: 50%;
 		text-decoration: none;
 		transition: all 0.5s;
-		font-size: 135px;
+		font-size: 50px;
 		margin: 20px;
 	 }
 
