--- a/css/test_facebook.css
+++ b/css/test_facebook.css
@@ -585,7 +585,16 @@ p {
   }
   
   @media (max-width: 767px){
-	  
+    
+    #resultado {
+      width: 70%;
+      display: inline-block;
+      margin-top: 50px;
+      color: white;
+      font-size: 1.8em;
+      font-weight: bold;
+  }
+
 	.botones a{
 		width: auto;
 		text-align: center;
@@ -594,14 +603,11 @@ p {
 		border-radius: 50%;
 		text-decoration: none;
 		transition: all 0.5s;
-		font-size: 135px;
+		font-size: 90px;
 		margin: 20px;
 	 }
 
-    
-    .baner-content {
-      padding-top: 30vh;
-    }
+  
   
     .baner-content h1 {
       font-size: 64px;
@@ -612,6 +618,7 @@ p {
   
     .baner-content span {
       font-size: 24px;
+      margin-top: 55%;
 	  width:auto;
     }
   
@@ -647,7 +654,6 @@ p {
 
   .contenedor{
   
-    padding-right: 15px;
 
 
     /* margin-right: auto; */
