--- a/css/test_twitter.css
+++ b/css/test_twitter.css
@@ -193,7 +193,7 @@ p {
   .baner-content {
     padding-top: 10vh;
     text-align: center;
-    background-image: url(../img/whatsapp.png);
+    background-image: url(../img/Twitter/Back_twitter.png);
   }
 
   .first-content{
@@ -256,7 +256,7 @@ p {
       font-weight: bold;
   }
   .backg{
-    background-image:url(../img/whatsappresp.PNG);
+    background-image:url(../img/Twitter/Respuestas_twitter.png);
     width: 100%;
     height: 100%;
   }
